--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
 	<head>
-	<title>YuanSyun.blog</title>
-	<head>
+		<title>YuanSyun.blog</title>
+		<link>
+	</head>
 	<body>
-	雞雞硬硬的
+	品皜雞雞硬硬的
+	郁潭沒GG
+	辛普森沒屁眼
+	元勳最帥了XD
 	</body>
 </html>
