--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="author" content="">
 		<link rel="icon" href="http://getbootstrap.com/favicon.ico">
 
-		<title>這是標頭</title>
+		<title>105網頁設計-期末作業</title>
 
 		<!--這是引用Bootstrap的語法-->
 		<!-- Latest compiled and minified CSS -->
@@ -21,7 +21,6 @@
     </head>
 	<!--主體-->
 	<body>
-
 		<nav class="navbar navbar-inverse">
 		  <div class="container">
 			<div class="navbar-header">
@@ -36,8 +35,8 @@
 			<!--TOP選單-->
 			<div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
 			  <ul class="nav navbar-nav">
-				<li class="active"><a href="http://getbootstrap.com/examples/starter-template/#">Home</a></li>
-				<li><a href="http://getbootstrap.com/examples/starter-template/#about">About</a></li>
+				<li class="active"><a href="http:/">Home</a></li>
+				<li><a href="./about.html">About</a></li>
 				<li><a href="http://getbootstrap.com/examples/starter-template/#contact">Contact</a></li>
 			  </ul>
 			</div><!--/.nav-collapse -->
@@ -47,7 +46,7 @@
 		<div class="container">
 		  <div class="starter-template">
 			<h1>Bootstrap starter 例子</h1>
-			<p class="lead">內容</p>
+			<p class="lead">作者：葉元勳</p>
 		  </div>
 		</div><!-- /.container -->
 </body></html>
