--- a/Contact.html
+++ b/Contact.html
@@ -9,7 +9,7 @@
 		<meta name="author" content="">
 		<link rel="icon" href="http://getbootstrap.com/favicon.ico">
 
-		<title>YuanSyun</title>
+		<title>YuanSyun Contact</title>
 
 		<!--這是引用Bootstrap的語法-->
 		<!-- Latest compiled and minified CSS -->
@@ -25,7 +25,7 @@
 		  <div class="container">
 			<div class="navbar-header">
 			  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-				<span class="sr-only">這好像是按鈕</span>
+				<span class="sr-only">不知道01</span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
@@ -36,7 +36,7 @@
 			<div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
 			  <ul class="nav navbar-nav">
 				<li class="active"><a href="./index.html">Home</a></li>
-				<li><a href="./About.html">About</a></li>
+				<li><a href="./about.html">About</a></li>
 				<li><a href="./Contact.hmtl">Contact</a></li>
 			  </ul>
 			</div><!--/.nav-collapse -->
@@ -45,8 +45,8 @@
 
 		<div class="container">
 		  <div class="starter-template">
-			<h1>個人簡歷</h1>
-			<p class="lead">最近我覺得自己變得好帥</p>
+			<h1>聯絡資訊：</h1>
+			<p class="lead">Mail = rty3497374@gmail.com</p>
 		  </div>
 		</div><!-- /.container -->
 </body></html>
