--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -8,35 +9,35 @@
 		<meta name="author" content="">
 		<link rel="icon" href="http://getbootstrap.com/favicon.ico">
 
-		<title>Starter Template for Bootstrap</title>
+		<title>YuanSyun About</title>
 
+		<!--這是引用Bootstrap的語法-->
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
 		<!-- Optional theme -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     </head>
+	<!--主體-->
 	<body>
-
 		<nav class="navbar navbar-inverse">
 		  <div class="container">
 			<div class="navbar-header">
 			  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-				<span class="sr-only">Toggle navigation</span>
+				<span class="sr-only">這好像是按鈕</span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			  </button>
-			  <a class="navbar-brand" href="http://getbootstrap.com/examples/starter-template/#">Project name</a>
+			  <a class="navbar-brand" href="http://getbootstrap.com/examples/starter-template/#">YuanSyun</a>
 			</div>
+			<!--TOP選單-->
 			<div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
 			  <ul class="nav navbar-nav">
-				<li class="active"><a href="http://getbootstrap.com/examples/starter-template/#">Home</a></li>
-				<li><a href="http://getbootstrap.com/examples/starter-template/#about">About</a></li>
-				<li><a href="http://getbootstrap.com/examples/starter-template/#contact">Contact</a></li>
+				<li class="active"><a href="./index.html">Home</a></li>
+				<li><a href="./about.html">About</a></li>
+				<li><a href="./Contact.hmtl">Contact</a></li>
 			  </ul>
 			</div><!--/.nav-collapse -->
 		  </div>
@@ -44,15 +45,8 @@
 
 		<div class="container">
 		  <div class="starter-template">
-			<p>1213213213232132</p>
+			<h1>關於我</h1>
+			<p class="lead">作者：葉元勳<br>學號：B10317051</p>
 		  </div>
 		</div><!-- /.container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-  
-
-</body>
-</html>
+</body></html>
