--- a/Contact.html
+++ b/Contact.html
@@ -37,7 +37,7 @@
 			  <ul class="nav navbar-nav">
 				<li class="active"><a href="./index.html">Home</a></li>
 				<li><a href="./about.html">About</a></li>
-				<li><a href="./Contact.hmtl">Contact</a></li>
+				<li><a href="./Contact.html">Contact</a></li>
 			  </ul>
 			</div><!--/.nav-collapse -->
 		  </div>
