--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 			<div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
 			  <ul class="nav navbar-nav">
 				<li class="active"><a href="./index.html">Home</a></li>
-				<li><a href="./About.html">About</a></li>
-				<li><a href="./Contact.hmtl">Contact</a></li>
+				<li><a href="./about.html">About</a></li>
+				<li><a href="./Contact.html">Contact</a></li>
 			  </ul>
 			</div><!--/.nav-collapse -->
 		  </div>
