--- a/Contact.html
+++ b/Contact.html
@@ -30,7 +30,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			  </button>
-			  <a class="navbar-brand" href="http://getbootstrap.com/examples/starter-template/#">YuanSyun</a>
+			  <a class="navbar-brand" href="http://yuansyun.github.io">YuanSyun</a>
 			</div>
 			<!--TOP選單-->
 			<div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
