--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			  </button>
-			  <a class="navbar-brand" href="http://getbootstrap.com/examples/starter-template/#">YuanSyun</a>
+			  <a class="navbar-brand" href="http://yuansyun.github.io">YuanSyun</a>
 			</div>
 			<!--TOP選單-->
 			<div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
 			  <ul class="nav navbar-nav">
-				<li class="active"><a href="./index.html">Home</a></li>
-				<li><a href="./about.html">About</a></li>
-				<li><a href="./Contact.html">Contact</a></li>
+				<li class="active"><a href="http://yuansyun.github.io/index.html">Home</a></li>
+				<li><a href="http://yuansyun.github.io/about.html">About</a></li>
+				<li><a href="http://yuansyun.github.io/Contact.html">Contact</a></li>
 			  </ul>
 			</div><!--/.nav-collapse -->
 		  </div>
