--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Highlights by HTML5 UP</title>
+		<!--標題-->
+		<title>Yuan-Syun,Ya</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -19,31 +20,48 @@
 		<!-- Header -->
 			<section id="header">
 				<header class="major">
-					<h1>Highlights</h1>
-					<p>A fun little { responsive } single pager by <a href="http://html5up.net">HTML5 UP</a></p>
+					<h1>個人簡歷</h1>
 				</header>
 				<div class="container">
 					<ul class="actions">
-						<li><a href="#one" class="button special scrolly">Begin</a></li>
+						<li><a href="#one" class="button special scrolly">開始</a></li>
 					</ul>
 				</div>
 			</section>
 
-		<!-- One -->
+		<!-- Page 1 -->
 			<section id="one" class="main special">
 				<div class="container">
 					<span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>Who I am</h2>
+							<h2>應徵工作</h2>
 						</header>
-						<p>Aliquam ante ac id. Adipiscing interdum lorem praesent fusce pellentesque arcu feugiat. Consequat sed ultricies rutrum. Sed adipiscing eu amet interdum lorem blandit vis ac commodo aliquet integer vulputate phasellus lorem ipsum dolor lorem magna consequat sed etiam adipiscing interdum.</p>
+						<p>C++程式語言設計工程師</p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</div>
 			</section>
 
-		<!-- Two -->
+		<!-- Page 2 -->
+			<section id="two" class="main special">
+				<div class="container">
+					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
+					<div class="content">
+						<header class="major">
+							<h2>我是誰?</h2>
+						</header>
+						<p>	姓名：葉元勳<br>
+							出生年次：1996<br>
+							擅長的程式語言：C++、C#、Java<br>
+							語言能力：Toeic 480<br>
+							程式能力檢定：CPE 3題<br>
+						</p>
+					</div>
+					<a href="#three" class="goto-next scrolly">Next</a>
+				</div>
+			</section>
+		<!--
 			<section id="two" class="main special">
 				<div class="container">
 					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
@@ -74,7 +92,8 @@
 					<a href="#three" class="goto-next scrolly">Next</a>
 				</div>
 			</section>
-
+		-->
+		
 		<!-- Three -->
 			<section id="three" class="main special">
 				<div class="container">
@@ -88,7 +107,7 @@
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
 			</section>
-
+		
 		<!-- Four -->
 		<!--
 			<section id="four" class="main">
@@ -433,10 +452,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				</div>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon alt fa-dribbble"><span class="label">Dribbble</span></a></li>
 						<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
