--- a/index.html
+++ b/index.html
@@ -54,11 +54,33 @@
 						<p>	姓名：葉元勳<br>
 							出生年次：1996<br>
 							擅長的程式語言：C++、C#、Java<br>
-							語言能力：Toeic 480<br>
+							英文能力：Toeic 480<br>
 							程式能力檢定：CPE 3題<br>
 						</p>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
+				</div>
+			</section>
+			
+		<!-- Page 3 -->
+			<section id="three" class="main special">
+				<div class="container">
+					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
+					<div class="content">
+						<header class="major">
+							<h2>C++歷程</h2>
+						</header>
+						<ul>
+						<li>線性代數-利用高斯消去法解未知數<li>
+						<li>小數點化分數功能<li>
+						<li>Call by value, reference, pointer應用<li>
+						<li>Class, Object應用<li>
+						<li>線性代數-利用高斯消去法解未知數<li>
+						<li>線性代數-利用高斯消去法解未知數<li>
+						</p>
+						</ul>
+					</div>
+					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
 			</section>
 		<!--
@@ -95,6 +117,7 @@
 		-->
 		
 		<!-- Three -->
+		<!--
 			<section id="three" class="main special">
 				<div class="container">
 					<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
@@ -107,6 +130,7 @@
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
 			</section>
+		-->
 		
 		<!-- Four -->
 		<!--
