--- a/index.html
+++ b/index.html
@@ -71,18 +71,39 @@
 							<h2>C++歷程</h2>
 						</header>
 						<ul>
-						<li>線性代數-利用高斯消去法解未知數<li>
-						<li>小數點化分數功能<li>
-						<li>Call by value, reference, pointer應用<li>
-						<li>Class, Object應用<li>
-						<li>線性代數-利用高斯消去法解未知數<li>
-						<li>線性代數-利用高斯消去法解未知數<li>
+						<li>線性代數-利用高斯消去法解未知數</li>
+						<li>小數點化分數功能</li>
+						<li>Call by value, reference, pointer應用</li>
+						<li>Class, Object應用</li>
+						<li>Write a function to transform from infix to postfix.(中序轉前序)</li>
+						</p>
+						</ul>
+					</div>
+					<a href="#four" class="goto-next scrolly">Next</a>
+				</div>
+			</section>
+			
+		<!-- Page 4 -->
+			<section id="three" class="main special">
+				<div class="container">
+					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
+					<div class="content">
+						<header class="major">
+							<h2>C#歷程</h2>
+						</header>
+						<ul>
+						<p>
+						<li>開關記事本</li>
+						<li>Draw Tree</li>
+						<li>利用Kruskal, Prim演算法化簡樹(MST)</li>
+						<li>老鼠走迷宮(遞迴的進階應用)</li>
 						</p>
 						</ul>
 					</div>
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
 			</section>
+		
 		<!--
 			<section id="two" class="main special">
 				<div class="container">
