--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						<li>小數點化分數功能</li>
 						<li>Call by value, reference, pointer應用</li>
 						<li>Class, Object應用</li>
-						<li>Write a function to transform from infix to postfix.(中序轉前序)</li>
+						<li>Write a function to transform from infix to postfix.<br>(中序轉前序)</li>
 						</p>
 						</ul>
 					</div>
@@ -84,7 +84,7 @@
 			</section>
 			
 		<!-- Page 4 -->
-			<section id="three" class="main special">
+			<section id="four" class="main special">
 				<div class="container">
 					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
 					<div class="content">
