--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 		-->
 		
 		<!-- Four -->
-		<!--
+		
 			<section id="four" class="main">
 				<div class="container">
 					<div class="content">
@@ -474,15 +474,15 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
 			</section>
-		-->
+		
 
 		<!-- Footer -->
 			<section id="footer">
 				<div class="container">
 					<header class="major">
-						<h2>Get in touch</h2>
+						<h2>聯絡我</h2>
 					</header>
-					<form method="post" action="#">
+					<form method="post" action="http://yuansyun.github.io/">
 						<div class="row uniform">
 							<div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
 							<div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
@@ -497,11 +497,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				</div>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="http://www.facebook.com/YuanSyun" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
+						<li>&copy; Untitled</li><li>網頁來源: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
 					</ul>
 				</footer>
 			</section>
