--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		<!-- Page 3 -->
 			<section id="three" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
+					<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>C++歷程</h2>
@@ -86,7 +86,7 @@
 		<!-- Page 4 -->
 			<section id="four" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
+					<span class="image fit primary"><img src="images/pic04.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>C#歷程</h2>
@@ -99,6 +99,23 @@
 						<li>老鼠走迷宮(遞迴的進階應用)</li>
 						</p>
 						</ul>
+					</div>
+					<a href="#five" class="goto-next scrolly">Next</a>
+				</div>
+			</section>
+			
+			<!-- Page 5 -->
+			<section id="five" class="main special">
+				<div class="container">
+					<span class="image fit primary"><img src="images/Toeic.jpg" alt="" /></span>
+					<div class="content">
+						<header class="major">
+							<h2>英文能力</h2>
+						</header>
+						<p>
+							480<br>
+							2015/05/31
+						</p>
 					</div>
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
@@ -154,7 +171,7 @@
 		-->
 		
 		<!-- Four -->
-		
+		<!--
 			<section id="four" class="main">
 				<div class="container">
 					<div class="content">
@@ -474,9 +491,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
 			</section>
-		
+		-->
 
 		<!-- Footer -->
+		<!--
 			<section id="footer">
 				<div class="container">
 					<header class="major">
@@ -504,6 +522,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</ul>
 				</footer>
 			</section>
+		-->
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
