--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 							<h2>英文能力</h2>
 						</header>
 						<p>
-							480<br>
-							2015/05/31
+							480 point<br>
+							Time: 2015/05/31<br>
 						</p>
 					</div>
 					<a href="#footer" class="goto-next scrolly">Next</a>
