--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		<!-- Page 3 -->
 			<section id="three" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
+					<span class="image fit primary"><img src="images/C++.png" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>C++歷程</h2>
@@ -86,7 +86,7 @@
 		<!-- Page 4 -->
 			<section id="four" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic04.jpg" alt="" /></span>
+					<span class="image fit primary"><img src="images/C#.png" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>C#歷程</h2>
