--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		<!-- Page 4 -->
 			<section id="four" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/C#.png" alt="" /></span>
+					<span class="image fit primary"><img src="images/Maze.png" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>C#歷程</h2>
