--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<!-- Page 2 -->
 			<section id="two" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
+					<span class="image fit primary"><img src="images/mySelf.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>我是誰?</h2>
