--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
 							Time: 2015/05/31<br>
 						</p>
 					</div>
-					<a href="#footer" class="goto-next scrolly">Next</a>
+					<a href="#six" class="goto-next scrolly">Next</a>
 				</div>
 			</section>
 			
 			<!-- Page 6 -->
-			<section id="five" class="main special">
+			<section id="six" class="main special">
 				<div class="container">
 					<span class="image fit primary"><img src="images/Archery.jpg" alt="" /></span>
 					<div class="content">
