--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 							擅長的程式語言：C++、C#、Java<br>
 							英文能力：Toeic 480<br>
 							程式能力檢定：CPE 3題<br>
+							社團經歷：射箭社-總務長
 						</p>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -125,6 +126,24 @@
 			<!-- Page 6 -->
 			<section id="six" class="main special">
 				<div class="container">
+					<span class="image fit primary"><img src="images/CPE.jpg" alt="" /></span>
+					<div class="content">
+						<header class="major">
+							<h2>CPE程式能力證明</h2>
+						</header>
+						<p>
+							共7題，答對3題<br>
+							排名：391 / 2044 19.1%<br>
+							Time: 2016/03/22<br>			
+						</p>
+					</div>
+					<a href="#seven" class="goto-next scrolly">Next</a>
+				</div>
+			</section>
+			
+			<!-- Page 7 -->
+			<section id="seven" class="main special">
+				<div class="container">
 					<span class="image fit primary"><img src="images/Archery.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
@@ -133,7 +152,7 @@
 						<p>
 							射箭社-總務<br>
 							Time: 2015/07 to 2016/07<br>
-							心得：<br>
+							心得：
 							<ul>
 								<li>基本的開會禮儀(準時、事前準備)</li>
 								<li>時間管理及規劃(課業與社團)</li>
