--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 			<!-- Page 6 -->
 			<section id="six" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/CPE.jpg" alt="" /></span>
+					<span class="image fit primary"><img src="images/CPE.png" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>CPE程式能力證明</h2>
@@ -152,8 +152,8 @@
 						<p>
 							射箭社-總務<br>
 							Time: 2015/07 to 2016/07<br>
-							心得：
 							<ul>
+							心得：
 								<li>基本的開會禮儀(準時、事前準備)</li>
 								<li>時間管理及規劃(課業與社團)</li>
 								<li>學習向團體付出的心</li>
