--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
 			</section>
 		-->
 		
-		<!-- Three -->
-		<!--
-			<section id="three" class="main special">
+		<!-- page 8 -->
+		
+			<section id="eight" class="main special">
 				<div class="container">
 					<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
@@ -213,7 +213,6 @@
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
 			</section>
-		-->
 		
 		<!-- Four -->
 		<!--
