--- a/index.html
+++ b/index.html
@@ -162,12 +162,12 @@
 							
 						</p>
 					</div>
-					<a href="#footer" class="goto-next scrolly">Next</a>
+					<a href="#eight" class="goto-next scrolly">Next</a>
 				</div>
 			</section>
 		
-		<!--
-			<section id="two" class="main special">
+			<!-- Page 8 -->
+			<section id="eight" class="main special">
 				<div class="container">
 					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
 					<div class="content">
@@ -194,14 +194,14 @@
 							</li>
 						</ul>
 					</div>
-					<a href="#three" class="goto-next scrolly">Next</a>
+					<a href="#nine" class="goto-next scrolly">Next</a>
 				</div>
 			</section>
-		-->
 		
-		<!-- page 8 -->
 		
-			<section id="eight" class="main special">
+		<!-- page 9 -->
+		
+			<section id="nine" class="main special">
 				<div class="container">
 					<span class="image fit primary"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
@@ -538,11 +538,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		-->
 
 		<!-- Footer -->
-		<!--
 			<section id="footer">
 				<div class="container">
 					<header class="major">
-						<h2>聯絡我</h2>
+						<h2>介紹完畢</h2>
 					</header>
 					<form method="post" action="http://yuansyun.github.io/">
 						<div class="row uniform">
@@ -566,7 +565,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</ul>
 				</footer>
 			</section>
-		-->
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
