--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 	</head>
 	<body>
 
@@ -21,6 +22,7 @@
 			<section id="header">
 				<header class="major">
 					<h1>個人簡歷</h1>
+					<i class="fa fa-bed" aria-hidden="true"></i>
 				</header>
 				<div class="container">
 					<ul class="actions">
