--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<!--引用ICON-->
 		<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 	</head>
 	<body>
@@ -21,8 +22,10 @@
 		<!-- Header -->
 			<section id="header">
 				<header class="major">
-					<h1>個人簡歷</h1>
-					<i class="fa fa-bed" aria-hidden="true"></i>
+					<h1>
+						<i class="fa fa-envelope-o" aria-hidden="true"></i>
+						個人簡歷					
+					</h1>
 				</header>
 				<div class="container">
 					<ul class="actions">
@@ -37,7 +40,10 @@
 					<span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>應徵工作</h2>
+							<h2>
+								<i class="fa fa-graduation-cap" aria-hidden="true"></i><br>
+								應徵工作
+							</h2>
 						</header>
 						<p>C++程式語言設計工程師</p>
 					</div>
@@ -51,7 +57,10 @@
 					<span class="image fit primary"><img src="images/mySelf.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>我是誰?</h2>
+							<h2>
+								<i class="fa fa-question-circle" aria-hidden="true"></i><br>
+								我是誰
+							</h2>
 						</header>
 						<p>	姓名：葉元勳<br>
 							出生年次：1996<br>
@@ -59,7 +68,7 @@
 							擅長的程式語言：C++、C#、Java<br>
 							英文能力：Toeic 480<br>
 							程式能力檢定：CPE 3題<br>
-							社團經歷：射箭社-總務長
+							社團經歷：射箭社-總務長<br>
 						</p>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -72,7 +81,10 @@
 					<span class="image fit primary"><img src="images/C++.png" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>C++歷程</h2>
+							<h2>
+								<i class="fa fa-desktop" aria-hidden="true"></i><br>
+								C++歷程
+							</h2>
 						</header>
 						<ul>
 						<li>線性代數-利用高斯消去法解未知數</li>
@@ -93,7 +105,10 @@
 					<span class="image fit primary"><img src="images/Maze.png" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>C#歷程</h2>
+							<h2>
+								<i class="fa fa-desktop" aria-hidden="true"></i><br>
+								C#歷程
+							</h2>
 						</header>
 						<ul>
 						<p>
@@ -114,7 +129,10 @@
 					<span class="image fit primary"><img src="images/Toeic.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>英文能力</h2>
+							<h2>
+								<i class="fa fa-comments" aria-hidden="true"></i><br>
+								英文能力
+							</h2>
 						</header>
 						<p>
 							480 point<br>
@@ -131,7 +149,10 @@
 					<span class="image fit primary"><img src="images/CPE.png" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>CPE程式能力證明</h2>
+							<h2>
+								<i class="fa fa-keyboard-o" aria-hidden="true"></i><br>
+								CPE程式能力證明
+							</h2>
 						</header>
 						<p>
 							共7題，答對3題<br>
@@ -149,7 +170,10 @@
 					<span class="image fit primary"><img src="images/Archery.jpg" alt="" /></span>
 					<div class="content">
 						<header class="major">
-							<h2>社團經驗</h2>
+							<h2>
+								<i class="fa fa-users" aria-hidden="true"></i><br>
+								社團經驗
+							</h2>
 						</header>
 						<p>
 							射箭社-總務<br>
@@ -161,7 +185,6 @@
 								<li>學習向團體付出的心</li>
 								<li>基礎記帳及核銷</li>
 							</ul>
-							
 						</p>
 					</div>
 					<a href="#eight" class="goto-next scrolly">Next</a>
