--- a/index.html
+++ b/index.html
@@ -86,14 +86,13 @@
 								C++歷程
 							</h2>
 						</header>
-						<ul>
-						<li>線性代數-利用高斯消去法解未知數</li>
-						<li>小數點化分數功能</li>
-						<li>Call by value, reference, pointer應用</li>
-						<li>Class, Object應用</li>
-						<li>Write a function to transform from infix to postfix.<br>(中序轉前序)</li>
+						<P>
+							線性代數-利用高斯消去法解未知數<br>
+							小數點化分數功能<br>
+							Call by value, reference, pointer應用<br>
+							Class, Object應用<br>
+							Write a function to transform from infix to postfix.<br>(中序轉前序)
 						</p>
-						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
 				</div>
@@ -110,14 +109,12 @@
 								C#歷程
 							</h2>
 						</header>
-						<ul>
 						<p>
-							<li>開關記事本</li>
-							<li>Draw Tree</li>
-							<li>利用Kruskal, Prim演算法化簡樹(MST)</li>
-							<li>老鼠走迷宮(遞迴的進階應用)</li>
+							開關記事本<br>
+							Draw Tree<br>
+							利用Kruskal, Prim演算法化簡樹(MST)<br>
+							老鼠走迷宮(遞迴的進階應用)
 						</p>
-						</ul>
 					</div>
 					<a href="#five" class="goto-next scrolly">Next</a>
 				</div>
@@ -178,13 +175,11 @@
 						<p>
 							射箭社-總務<br>
 							Time: 2015/07 to 2016/07<br>
-							<ul>
-							心得：
-								<li>基本的開會禮儀(準時、事前準備)</li>
-								<li>時間管理及規劃(課業與社團)</li>
-								<li>學習向團體付出的心</li>
-								<li>基礎記帳及核銷</li>
-							</ul>
+							心得：<br>
+								基本的開會禮儀(準時、事前準備)<br>
+								時間管理及規劃(課業與社團)<br>
+								學習向團體付出的心<br>
+								基礎記帳及核銷
 						</p>
 					</div>
 					<a href="#eight" class="goto-next scrolly">Next</a>
