--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <!--
+	尊重著作權
 	Highlights by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
@@ -10,15 +11,9 @@
 		<title>Yuan-Syun,Ya</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<!--引用ICON-->
-		<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 	</head>
 	<body>
-
 		<!-- Header -->
 			<section id="header">
 				<header class="major">
@@ -192,16 +187,23 @@
 					<header class="major">
 						<h2>
 							<i class="fa fa-check" aria-hidden="true"></i><br>
-							介紹完畢
+							介紹完畢<br>
 						</h2>
+						<p>
+							學生：<a href="https://www.facebook.com/YuanSyun">葉元勳</a><br>
+							指導老師：<a href="https://www.facebook.com/gloomcheng">鄭富源老師</a><br>
+						</p>
 					</header>
 				</div>
+				<!--數獨超連結-->
+				<div class="container">
+					<h1>
+					<i class="fa fa-gamepad" aria-hidden="true"></i><a href="Sudoku/index.html">輕鬆一下</a><br>
+					</h1>
+				</div>
 				<footer>
-					<ul class="icons">
-						<li><a href="http://www.facebook.com/YuanSyun" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled</li><li>網頁來源: <a href="http://html5up.net">HTML5 UP</a></li><li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
+						<li>&copy; Untitled</li><li>Demo Images: <a href="http://unsplash.com">Unsplash</a></li>
 					</ul>
 				</footer>
 			</section>
