--- a/Sudoku/index.html
+++ b/Sudoku/index.html
@@ -75,9 +75,10 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Sudoku</a><br></h1>
+								<h1>Sudoku<br></h1>
 								<p>數獨</p>
 							</header>
+							
 							<footer>
 								<a href="#wrapper" class="button circled scrolly">Start</a>
 							</footer>
@@ -98,7 +99,10 @@
 					<!--數獨開始-->
 						<div class="content" ng-controller="SudokuController">
 							<div class="row">
-								<div class="col-md-11 col-sm-11 col-xs-11">
+								<!--排版用-->
+								<div class="col-md-1 col-sm-1 col-xs-1"></div>
+								<!--9X9格子-->
+								<div class="col-md-9 col-sm-9 col-xs-9">
 									<div ng-repeat="row in rows" class="row  {[{ row.id | row_modulo_3 }]}">
 										<div ng-repeat="column in row.columns" class="col-md-1 col-sm-1 col-xs-1 {[{ column.id | column_modulo_3 }]}">
 											<input class="form-control {[{ column.class }]} {[{check(row.id, column.id)}]}"
@@ -110,7 +114,8 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-md-1 col-sm-1 col-xs-1">
+								<!--按鈕大小-->
+								<div class="col-md-2 col-sm-2 col-xs-2">
 									<div class="row">
 										<br><br>
 										<button class="btn btn-default btn-block" ng-click="init()"><i
@@ -132,15 +137,6 @@
 									</div>
 								</div>
 							</div>
-							<hr>
-							<div class="row">
-								<div class="col-md-11 col-sm-11 col-xs-11 col-md-offset-1 col-sd-offset-1 col-xs-offset-1">
-									<button disabled="disabled" type="button" class="btn btn-default" ng-repeat="possibility in currentPossibilities">
-										{[{possibility}]}
-									</button>
-								</div>
-							</div>
-							<hr>
 						</div>
 					</div>
 					<!--數獨結束-->
